Revision history for Verilator

The contributors that suggested a given feature are shown in []. Thanks!

* Verilator 3.919 devel

****  Fix gate optimization out of memory, add --gate-stmts, bug1260. [Alex Solomatnikov]

****  Fix compile error on public real parameters by suppressing, bug1261. [Alex Solomatnikov]

****  Fix input-only tristate comparisons, bug1267. [Alexis G]

****  Remove c++filt, bug1265. [Stefan Wallentowitz]


* Verilator 3.918 2018-01-02

***   Workaround GCC/clang bug with huge compile times, bug1248.

***   Support DPI open arrays, bug909, bug1245. [David Pierce, Victor Besyakov]

***   Add INFINITELOOP warning, bug1254. [Alex Solomatnikov]

****  Support > 64 bit decimal $display.

****  Support DPI time and svLogicVal. [Victor Besyakov]
      Note older version incorrectly assumed svBitVal even for logicals.

****  Support string len() method. [Victor Besyakov]

****  Add error if always_comb has sensitivity list. [Arjen Roodselaar]

****  Fix SystemC 2.3.2 compile error, bug1251. [Tymoteusz Blazejczyk]

****  Fix modport outputs being treated as inputs, bug1246. [Jeff Bush]

****  Fix false ALWCOMBORDER on interface references, bug1247. [Josh Redford]

****  Fix constant propagation across DPI imports of inout strings. [Victor Besyakov]

****  Fix resolving inline nested interface names, bug1250. [Arjen Roodselaar]


* Verilator 3.916 2017-11-25

***   Support self-recursive modules, bug659. [Sean Moore, et al]

***   Support $error/$warning in elaboration time blocks.

***   Support $size/$bits/etc on type references.

***   Add error when driving input-only modport, bug1110. [Trevor Elbourne]

***   Add BSSPACE and COLONPLUS lint warnings.

****  Detect MSB overflow when under VL_DEBUG, bug1238. [Junyi Xi]

****  Add data types to --xml. [Rui Terra]

****  Fix partial slicing with pattern assignments, bug991. [Johan Bjork]

****  Fix false unused warning on interfaces, bug1241. [Laurens van Dam]
